--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="container mx-auto flex justify-between items-center">
             <div class="flex items-center space-x-4">
                 <i class="fas fa-cube text-2xl"></i>
-                <h1 class="text-xl font-bold">食品品牌A - 库存管理系统</h1>
+                <h1 class="text-xl font-bold">食品品牌A -工作台</h1>
             </div>
             <div class="flex items-center space-x-4">
                 <span class="bg-green-500 px-2 py-1 rounded text-sm">系统正常</span>
@@ -45,15 +45,11 @@
                 <button onclick="showPage('dashboard')" class="nav-btn w-full text-left px-4 py-2 rounded bg-blue-500 text-white">
                     <i class="fas fa-dashboard mr-2"></i>库存总览仪表板
                 </button>
-                <button onclick="showPage('allocation')" class="nav-btn w-full text-left px-4 py-2 rounded hover:bg-gray-100">
-                    <i class="fas fa-cogs mr-2"></i>智能分配控制台
-                </button>
+
                 <button onclick="showPage('monitor')" class="nav-btn w-full text-left px-4 py-2 rounded hover:bg-gray-100">
                     <i class="fas fa-chart-line mr-2"></i>实时监控
                 </button>
-                <button onclick="showPage('strategy')" class="nav-btn w-full text-left px-4 py-2 rounded hover:bg-gray-100">
-                    <i class="fas fa-chess-knight mr-2"></i>策略配置
-                </button>
+
             </nav>
         </aside>
 
@@ -70,7 +66,7 @@
                             <div class="flex items-center justify-between">
                                 <div>
                                     <p class="text-sm text-gray-600">总库存量</p>
-                                    <p class="text-2xl font-bold text-blue-600">156,423</p>
+                                    <p class="text-2xl font-bold text-blue-600">150,000</p>
                                 </div>
                                 <i class="fas fa-boxes text-3xl text-blue-500"></i>
                             </div>
@@ -79,7 +75,7 @@
                             <div class="flex items-center justify-between">
                                 <div>
                                     <p class="text-sm text-gray-600">可用库存</p>
-                                    <p class="text-2xl font-bold text-green-600">142,115</p>
+                                    <p class="text-2xl font-bold text-green-600">140,000</p>
                                 </div>
                                 <i class="fas fa-check-circle text-3xl text-green-500"></i>
                             </div>
@@ -88,7 +84,7 @@
                             <div class="flex items-center justify-between">
                                 <div>
                                     <p class="text-sm text-gray-600">已分配库存</p>
-                                    <p class="text-2xl font-bold text-orange-600">12,856</p>
+                                    <p class="text-2xl font-bold text-orange-600">12,000</p>
                                 </div>
                                 <i class="fas fa-hand-holding text-3xl text-orange-500"></i>
                             </div>
@@ -97,7 +93,7 @@
                             <div class="flex items-center justify-between">
                                 <div>
                                     <p class="text-sm text-gray-600">保质期预警</p>
-                                    <p class="text-2xl font-bold text-red-600">1,452</p>
+                                    <p class="text-2xl font-bold text-red-600">1,234</p>
                                 </div>
                                 <i class="fas fa-exclamation-triangle text-3xl text-red-500"></i>
                             </div>
