--- a/index.html
+++ b/index.html
@@ -491,21 +491,21 @@
                             <div class="space-y-4">
                                 <div class="flex items-center justify-between p-3 bg-blue-50 rounded">
                                     <div>
-                                        <p class="font-semibold text-sm">订单 #ORD20240301001</p>
+                                        <p class="font-semibold text-sm">订单 #ORD20250722001</p>
                                         <p class="text-xs text-gray-600">华东大仓 → 上海</p>
                                     </div>
                                     <span class="bg-blue-500 text-white px-2 py-1 rounded text-xs">处理中</span>
                                 </div>
                                 <div class="flex items-center justify-between p-3 bg-green-50 rounded">
                                     <div>
-                                        <p class="font-semibold text-sm">订单 #ORD20240301002</p>
+                                        <p class="font-semibold text-sm">订单 #ORD20250722002</p>
                                         <p class="text-xs text-gray-600">华南大仓 → 广州</p>
                                     </div>
                                     <span class="bg-green-500 text-white px-2 py-1 rounded text-xs">已发货</span>
                                 </div>
                                 <div class="flex items-center justify-between p-3 bg-yellow-50 rounded">
                                     <div>
-                                        <p class="font-semibold text-sm">订单 #ORD20240301003</p>
+                                        <p class="font-semibold text-sm">订单 #ORD20250722003</p>
                                         <p class="text-xs text-gray-600">华北大仓 → 北京</p>
                                     </div>
                                     <span class="bg-yellow-500 text-white px-2 py-1 rounded text-xs">待分配</span>
@@ -552,10 +552,10 @@
                                         <path d="M18 2.0845a 15.9155 15.9155 0 0 1 0 31.831a 15.9155 15.9155 0 0 1 0 -31.831" fill="none" stroke="#4ade80" stroke-width="2" stroke-dasharray="85, 100"/>
                                     </svg>
                                     <div class="absolute inset-0 flex items-center justify-center">
-                                        <span class="text-lg font-semibold">85%</span>
+                                        <span class="text-lg font-semibold">95%</span>
                                     </div>
                                 </div>
-                                <p class="mt-2 text-sm text-gray-600">系统响应速度</p>
+                                <p class="mt-2 text-sm text-gray-600">库存准确率</p>
                             </div>
                             <div class="text-center">
                                 <div class="relative inline-block">
@@ -564,10 +564,10 @@
                                         <path d="M18 2.0845a 15.9155 15.9155 0 0 1 0 31.831a 15.9155 15.9155 0 0 1 0 -31.831" fill="none" stroke="#3b82f6" stroke-width="2" stroke-dasharray="92, 100"/>
                                     </svg>
                                     <div class="absolute inset-0 flex items-center justify-center">
-                                        <span class="text-lg font-semibold">92%</span>
+                                        <span class="text-lg font-semibold">3%</span>
                                     </div>
                                 </div>
-                                <p class="mt-2 text-sm text-gray-600">数据同步率</p>
+                                <p class="mt-2 text-sm text-gray-600">缺货率</p>
                             </div>
                             <div class="text-center">
                                 <div class="relative inline-block">
@@ -576,10 +576,10 @@
                                         <path d="M18 2.0845a 15.9155 15.9155 0 0 1 0 31.831a 15.9155 15.9155 0 0 1 0 -31.831" fill="none" stroke="#f59e0b" stroke-width="2" stroke-dasharray="78, 100"/>
                                     </svg>
                                     <div class="absolute inset-0 flex items-center justify-center">
-                                        <span class="text-lg font-semibold">78%</span>
+                                        <span class="text-lg font-semibold">20%</span>
                                     </div>
                                 </div>
-                                <p class="mt-2 text-sm text-gray-600">API成功率</p>
+                                <p class="mt-2 text-sm text-gray-600">呆滞库存率</p>
                             </div>
                         </div>
                     </div>
